--- a/SummerSchoolPaper/discussion.tex
+++ b/SummerSchoolPaper/discussion.tex
@@ -8,7 +8,7 @@ recomputation of non computer science experiments was encouraging in
 that it was achieved in a relatively short amount of time.
 Nevertheless important issues arose, such as the impossibility of
 distributing the resulting VM because of legal issues. 
-Such issues neeed attention and easing as much as possible.  In many cases literally nobody knows what the answers to some of the legal questions are: this is not because they are necessary complex but because they have not been tested in court.  This means that we have a situation where we suspect that how we are reproducing work is legal, but do not know it is: a position that might be comfortable in quantum mechanics but less so to the more classically binary computer scientist. 
+Such issues need attention and easing as much as possible.  In many cases literally nobody knows what the answers to some of the legal questions are: this is not because they are necessary complex but because they have not been tested in court.  This means that we have a situation where we suspect that how we are reproducing work is legal, but do not know it is: a position that might be comfortable in quantum mechanics but less so to the more classically binary computer scientist. 
 
 \textbf{Say something about Miguel's section?}
 
